--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     
 
-    <img src="gap.jpg"
+    <img src="assets/wage-gap-scaled.jpg"
       alt="A graphic showing that while a white man earns a dollar, a white woman earns 77 cents, an African American woman earns 65 cents, and a Hispanic woman earns 57 cents."/>
 
     <p>
