--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
          <li>
            <a href="action.html">Take Action</a>
          </li>
+         <li>
+           <a href="about.html">About Me!</a>
+         </li>
        </ul> 
       </nav>
     
