--- a/action.html
+++ b/action.html
@@ -37,7 +37,10 @@
            <a href="index.html">Home</a>
          </li>
          <li>
-           <a href="action">Take Action</a>
+           <a href="action.html">Take Action</a>
+         </li>
+         <li>
+           <a href="about.html">About Me!</a>
          </li>
        </ul> 
       </nav>
